[tool.poetry]
name = "python-trulens-palm"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
jupyterlab = "^4.0.9"
trulens-eval = "^0.18.2"
setuptools = "^69.0.2"
chromadb = "^0.4.18"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
